--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -15,6 +15,13 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1  # Change to your AWS region
+
       - name: Install Dependencies
         run: |
           cd client
@@ -27,8 +34,9 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync client/dist/ s3://pos-frontend-2200 --delete
+          aws s3 sync client/dist/ s3://pos-frontend-2200 --delete \
+            --cache-control "max-age=0, no-cache, no-store, must-revalidate"
 
       - name: Invalidate CloudFront Cache
         run: |
-          aws cloudfront create-invalidation --distribution-id E1FIEL69JQ4QVH --paths "/*"
+          aws cloudfront create-invalidation --distribution-id E1FIEL69JQ4QVH --paths "/index.html"
